unpackaged/main/default/objects/npe01__OppPayment__c/fields/NS_Reversal_J_E_Integration_DateTime__c.field-meta.xml
<CustomField>
    <fullName>NS_Reversal_J_E_Integration_DateTime__c</fullName>
    <label>NS Reversal J.E. Integration DateTime</label>
    <type>DateTime</type>
</CustomField>