unpackaged/main/default/objects/npe01__OppPayment__c/fields/Number_of_Shares__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shares__c</fullName>
    <label>Number of Shares</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>