unpackaged/main/default/objects/npe01__OppPayment__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <inlineHelpText>This is the Payment Amount converted to USD.</inlineHelpText>
    <label>Paid Amount in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>