unpackaged/main/default/objects/npe01__OppPayment__c/fields/Payment_Do_Not_Acknowledge_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payment_Do_Not_Acknowledge_Reason__c</fullName>
    <label>Payment Do Not Acknowledge Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>