unpackaged/main/default/objects/npe01__OppPayment__c/fields/Payment_Donor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Donor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only populate when the Payment fulfills a Pledge and the Payment Donor is not the Pledge Opportunity Donor.</inlineHelpText>
    <label>Payment Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pledge Payments</relationshipLabel>
    <relationshipName>PledgePayments</relationshipName>
    <type>Lookup</type>
</CustomField>