unpackaged/main/default/objects/npe01__OppPayment__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>IF( npe01__Written_Off__c , "Written Off", IF ( npe01__Paid__c , "Paid", "Unpaid"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>