unpackaged/main/default/objects/npe01__OppPayment__c/fields/Pledge_Inst_Receivable_Natural_Account__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Inst_Receivable_Natural_Account__c</fullName>
    <formula>IF (
AND(
(RecordType.DeveloperName) ="Major Gift", TEXT( npe01__Opportunity__r.Transaction_Type__c )= "Corporate"),"14300",
IF(
AND((RecordType.DeveloperName) ="Major Gift", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Individual"),"14000",
IF(
AND((RecordType.DeveloperName) ="Grant", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Individual"),"14000",
IF(
AND((RecordType.DeveloperName) = "Grant", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Corporate"), "14300",
IF(
AND((RecordType.DeveloperName) ="Major Gift", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Foundation"),"14100",
IF(
AND((RecordType.DeveloperName) ="Grant", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Foundation"),"14100",
IF(
AND((RecordType.DeveloperName) = "Grant", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Government"), "14200",
IF(
AND((RecordType.DeveloperName) ="Major Gift", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Government"),"14200",
IF(
AND((RecordType.DeveloperName) ="Grant", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Other Institutional Giving"),"14220",
IF(
AND((RecordType.DeveloperName) ="Major Gift", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Other Institutional Giving"),"14220",
IF(
AND((RecordType.DeveloperName) ="Grant", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Government Contract"),"14300",
IF(
AND((RecordType.DeveloperName) ="Major Gift", TEXT(npe01__Opportunity__r.Transaction_Type__c )= "Government Contract"),"14300",
null))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pledge Inst Receivable Natural Account</label>
    <type>Text</type>
</CustomField>