unpackaged/main/default/objects/npe01__OppPayment__c/fields/Pledge_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Reminder_Date__c</fullName>
    <description>Used for capturing when a Pledge reminder is sent. Manually maintained, primarily by the Development Stewardship team</description>
    <label>Pledge Reminder Date</label>
    <type>Date</type>
</CustomField>