unpackaged/main/default/objects/npe01__OppPayment__c/fields/Pledge_Reminder_Reason_Not_Sent__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Reminder_Reason_Not_Sent__c</fullName>
    <description>Allows a user to specify why a pledge reminder was not sent to the donor.</description>
    <label>Pledge Reminder Not Sent Reason</label>
    <type>TextArea</type>
</CustomField>