unpackaged/main/default/objects/npe01__OppPayment__c/fields/Pledge_Reminder_Status__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Reminder_Status__c</fullName>
    <description>Allows user to indicate if a pledge reminder was sent to a donor.</description>
    <label>Pledge Reminder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pledge Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Pledge Reminder Not Sent</fullName>
            </value>
            <value>
                <fullName>Pledge Reminder Will Not be Sent</fullName>
            </value>
            <value>
                <fullName>Prior to Reminder Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>