unpackaged/main/default/objects/npe01__OppPayment__c/fields/Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Processed_By__c</fullName>
    <label>Processed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>DMP</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Donor Records</fullName>
            </value>
            <value>
                <fullName>Electronic Billing</fullName>
            </value>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Merkle</fullName>
            </value>
            <value>
                <fullName>Payment Solutions</fullName>
            </value>
            <value>
                <fullName>Telemarketer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>