unpackaged/main/default/objects/npe01__OppPayment__c/fields/Processed_Through__c.field-meta.xml
<CustomField>
    <fullName>Processed_Through__c</fullName>
    <label>Processed Through</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ActBlue</fullName>
            </value>
            <value>
                <fullName>Classy</fullName>
            </value>
            <value>
                <fullName>Common Ground</fullName>
            </value>
            <value>
                <fullName>Convio online marketing</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Internal Donate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>