unpackaged/main/default/objects/npe01__OppPayment__c/fields/Receipted_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipted_Date__c</fullName>
    <label>Receipted Date</label>
    <type>Date</type>
</CustomField>