unpackaged/main/default/objects/npe01__OppPayment__c/fields/Receipted_Status__c.field-meta.xml
<CustomField>
    <fullName>Receipted_Status__c</fullName>
    <label>Receipted Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Receipted</fullName>
            </value>
            <value>
                <fullName>Do not receipt</fullName>
            </value>
            <value>
                <fullName>Receipted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>