unpackaged/main/default/objects/npe01__OppPayment__c/fields/Refund_Type__c.field-meta.xml
<CustomField>
    <fullName>Refund_Type__c</fullName>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Returned Check</fullName>
            </value>
            <value>
                <fullName>Invalid Donation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>