unpackaged/main/default/objects/npe01__OppPayment__c/fields/Reversed_Date_donation_edf__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Date_donation_edf__c</fullName>
    <description>Created as a part of Heller Data Migration 2021.</description>
    <label>Reversed Date</label>
    <type>Date</type>
</CustomField>