unpackaged/main/default/objects/npe01__OppPayment__c/fields/Securities_Name__c.field-meta.xml
<CustomField>
    <fullName>Securities_Name__c</fullName>
    <label>Securities Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>