unpackaged/main/default/objects/npe01__OppPayment__c/fields/Share_Price_at_time_of_Gift__c.field-meta.xml
<CustomField>
    <fullName>Share_Price_at_time_of_Gift__c</fullName>
    <label>Share Price at time of Gift</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>