unpackaged/main/default/objects/npe01__OppPayment__c/fields/Stock_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Stock_Symbol__c</fullName>
    <label>Stock Symbol</label>
    <length>8</length>
    <type>Text</type>
</CustomField>