unpackaged/main/default/objects/npe01__OppPayment__c/fields/Verisign_Id__c.field-meta.xml
<CustomField>
    <fullName>Verisign_Id__c</fullName>
    <label>Verisign Transaction ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>