unpackaged/main/default/objects/npe01__OppPayment__c/recordTypes/Payment.recordType-meta.xml
<RecordType>
    <fullName>Payment</fullName>
    <active>true</active>
    <label>Payment</label>
</RecordType>