unpackaged/main/default/objects/npe01__OppPayment__c/listViews/All_Payments.listView-meta.xml
<ListView>
    <fullName>All_Payments</fullName>
    <columns>NAME</columns>
    <columns>Payment_Status__c</columns>
    <columns>npsp__Type__c</columns>
    <columns>npe01__Payment_Method__c</columns>
    <columns>npe01__Payment_Amount__c</columns>
    <columns>npsp__Batch_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Payments</label>
</ListView>